--- a/wb-shtrixmqtt-conf.yaml
+++ b/wb-shtrixmqtt-conf.yaml
@@ -1,6 +1,6 @@
 debug:   true
 timeout: 3000
-name:    "/devices/shtrixm"
+name:    "/client/devices/shtrixm"
 mqtt:
   protocol: "tcp"
   address:  "localhost"
