--- a/debian/control
+++ b/debian/control
@@ -9,4 +9,4 @@ Package: wb-shtrixmqtt
 Architecture: armel amd64 i386
 Depends: libc6 (>= 2.13), ${misc:Depends}
 Breaks: wb-mqtt-confed (<< 1.0.2)
-Description: Wiren Board Bolid Controll
+Description: Wiren Board Shtrixmqtt Controll
